// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocationAutocomplete/> that renders a location search field should pass predictions to AutosuggestDeprecated 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-4-label"
      aria-owns="downshift-4-menu"
      class="SelectBase__main SelectBase__main--focused"
      role="combobox"
    >
      <div
        class="FieldWrapper FieldWrapper--isFocused SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
          >
            <svg
              class="LocationAutocomplete__icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
              />
            </svg>
            <input
              aria-activedescendant="downshift-4-item-0"
              aria-autocomplete="list"
              aria-controls="downshift-4-menu"
              aria-labelledby="downshift-4-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="Location..."
              value="Tonga"
            />
          </div>
          <ul
            aria-labelledby="downshift-4-label"
            class="List SelectBase__list--focused"
            id="downshift-4-menu"
            role="listbox"
          >
            <img
              alt="Powered by Google"
              class="LocationAutocomplete__poweredByGoogleImage"
              data-list-exception="true"
              src="test-file-stub"
              srcset="test-file-stub, test-file-stub 2x, test-file-stub 3x"
            />
            <li
              aria-selected="true"
              class="ListItem ListItem--isHighlighted ListItem--clickable List__item"
              id="downshift-4-item-0"
              role="option"
            >
              <span>
                Truro
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable List__item"
              id="downshift-4-item-1"
              role="option"
            >
              <span>
                Trowbridge
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable List__item"
              id="downshift-4-item-2"
              role="option"
            >
              <span>
                Tring
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable List__item"
              id="downshift-4-item-3"
              role="option"
            >
              <span>
                Troon
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable List__item"
              id="downshift-4-item-4"
              role="option"
            >
              <span>
                Tredegar
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LocationAutocomplete/> that renders a location search field should render with minimal props 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper"
          >
            <svg
              class="LocationAutocomplete__icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
              />
            </svg>
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="Location..."
              value=""
            />
          </div>
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
